Fix colors of map controls in dark mode

--- a/public/css/dark-theme.css
+++ b/public/css/dark-theme.css
@@ -10,7 +10,12 @@ body.dark-theme
 	--location-input-color: rgba(255, 255, 255, 0.9);
 	--location-input-border: transparent;
 	--map-background: #1f1f1f;
+	--map-border: #353535;
 	--map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7); /* dark map */
+	--map-attribution-bg: rgba(0, 0, 0, 0.6);
+	--map-attribution-color: rgb(161, 161, 161);
+	--map-zoom-bg: rgb(26, 26, 26);
+	--map-zoom-border-bottom: rgba(255, 255, 255, 0.3);
 	--brightness-bar-full: var(--primary);
 	--spinner-color: var(--primary);
 }
@@ -30,7 +35,12 @@ body.dark-theme
 		--location-input-color: rgba(255, 255, 255, 0.9);
 		--location-input-border: transparent;
 		--map-background: #1f1f1f;
+		--map-border: #353535;
 		--map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7); /* dark map */
+		--map-attribution-bg: rgba(0, 0, 0, 0.6);
+		--map-attribution-color: rgb(161, 161, 161);
+		--map-zoom-bg: rgb(26, 26, 26);
+		--map-zoom-border-bottom: rgba(255, 255, 255, 0.3);
 		--brightness-bar-full: var(--primary);
 		--spinner-color: var(--primary);
 	}
